# theChance

./: .gitignore  CMakeLists.txt  README.md
logger/: CMakeLists.txt  README.txt
logger/include/: logger.h
logger/include/strategy/: compositeLogStrategy.h  consoleLogStrategy.h  fileLogStrategy.h  logStratery.h
logger/src/: logger.cpp
logger/src/strategy/: compositeLogStrategy.cpp  consoleLogStrategy.cpp  fileLogStrategy.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/: engine.cpp  engine.hpp  game.cpp  game.hpp  main.cpp
